--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,18 @@
 services:
   online-shop:
-    image: highload-maga
-    ports:
-      - "8080:8080"
+    mem_limit: 1024m
+    build:
+        context: .
+        dockerfile: Dockerfile
+#    image: highload-maga
+#    ports:
+#      - "8081:8080"
     restart: unless-stopped
+    deploy:
+      replicas: 5
     networks:
       - external_network
+
 #    environment:
 #      TEST_SERVICE_IP: "host.docker.internal"
 #      POSTGRES_ADDRESS: ${POSTGRES_ADDRESS}
@@ -44,6 +51,17 @@ services:
       - prometheus
     networks:
       - external_network
+
+  nginx:
+    image: nginx:latest
+    ports:
+        - "8080:80"
+    volumes:
+        - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+        - online-shop
+    networks:
+        - external_network
 
 
 networks:
