--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,8 +5,12 @@
 scrape_configs:
   - job_name: 'spring'
     metrics_path: '/actuator/prometheus'
-    static_configs:
-      - targets: ['host.docker.internal:8080']
+#    static_configs:
+#      - targets: ['online-shop:8080']
+    dns_sd_configs:
+      - names: ['online-shop']
+        type: 'A'
+        port: 8080
     scrape_interval: 5s
 #  - job_name: 'online-shop-job'
 #    metrics_path: '/actuator/prometheus'
