--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   online-shop:
-    mem_limit: 1024m
+    mem_limit: 1048m
     build:
         context: .
         dockerfile: Dockerfile
@@ -9,7 +9,7 @@ services:
 #      - "8081:8080"
     restart: unless-stopped
     deploy:
-      replicas: 5
+      replicas: 1
     networks:
       - external_network
 
@@ -62,6 +62,46 @@ services:
         - online-shop
     networks:
         - external_network
+
+  redis:
+    image: redis:8.6-rc1-alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - external_network
+
+  postgres:
+    image: postgres:14.9-alpine
+    env_file:
+      - ./.env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - ${POSTGRES_CONTAINER_EXPOSED_PORT}:${POSTGRES_CONTAINER_INTERNAL_PORT} #todo
+    command: postgres -c shared_preload_libraries=pg_stat_statements -c pg_stat_statements.track=all -c max_connections=200
+    #command: postgres
+    restart: unless-stopped
+    networks:
+      - external_network
+
+  postgres-exporter:
+    image: bitnami/postgres-exporter:latest
+    volumes:
+      - ./postgres_exporter.yml:/opt/bitnami/postgres-exporter/postgres_exporter.yml
+    env_file:
+      - ./.env
+    environment:
+      DATA_SOURCE_URI: postgres:${POSTGRES_CONTAINER_INTERNAL_PORT}/${POSTGRES_DB}?sslmode=disable
+      DATA_SOURCE_USER: ${POSTGRES_USER}
+      DATA_SOURCE_PASS: ${POSTGRES_PASSWORD}
+    ports:
+      - "9187:9187"
+    depends_on:
+      - postgres
+    networks:
+      - external_network
 
 
 networks:
