--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,11 @@ events {}
 
 http {
     upstream app {
-       server highload-maga-online-shop-1:8080 weight=1;
-       server highload-maga-online-shop-2:8080 weight=1;
+#       server highload-maga-online-shop-1:8080 weight=1;
+#       server highload-maga-online-shop-2:8080 weight=1;
        server highload-maga-online-shop-3:8080 weight=1;
-       server highload-maga-online-shop-4:8080 weight=1;
-       server highload-maga-online-shop-5:8080 weight=1;
+#       server highload-maga-online-shop-4:8080 weight=1;
+#       server highload-maga-online-shop-5:8080 weight=1;
     }
     server {
         listen 80;
