--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,14 +5,13 @@
 scrape_configs:
   - job_name: 'spring'
     metrics_path: '/actuator/prometheus'
-#    static_configs:
-#      - targets: ['online-shop:8080']
     dns_sd_configs:
       - names: ['online-shop']
         type: 'A'
         port: 8080
     scrape_interval: 5s
-#  - job_name: 'online-shop-job'
-#    metrics_path: '/actuator/prometheus'
-#    static_configs:
-#      - targets: ['host.docker.internal:8081']
+  - job_name: 'postgres-exporter'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: [ "postgres-exporter:9187" ]
+    scrape_interval: 5s
