--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,24 @@ management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.prometheus.metrics.export.enabled=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/shop_db
+spring.datasource.username=shop_db
+spring.datasource.password=shop_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Liquibase changelog
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+
+#cache
+spring.cache.type=redis
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+
+# JPA / Hibernate (dev-friendly)
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=false
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
