--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,15 @@ management.endpoint.health.show-details=always
 management.prometheus.metrics.export.enabled=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
+spring.datasource.master.jdbc-url=jdbc:postgresql://postgres:5432/shop_db
+spring.datasource.master.username=shop_db
+spring.datasource.master.password=shop_db
+spring.datasource.master.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/shop_db
-spring.datasource.username=shop_db
-spring.datasource.password=shop_db
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.slave.jdbc-url=jdbc:postgresql://pg-replica:5432/shop_db
+spring.datasource.slave.username=shop_db
+spring.datasource.slave.password=shop_db
+spring.datasource.slave.driver-class-name=org.postgresql.Driver
 
 # Liquibase changelog
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
